force-app/main/default/objects/SLA_Escalation_History__c/SLA_Escalation_History__c.object-meta.xml
<CustomObject>
    <label>SLA Escalation History</label>
    <nameField>
        <displayFormat>SEH-{000000}</displayFormat>
        <label>Escalation History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Escalation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>