force-app/main/default/objects/SLA_Escalation_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SLA Escalation Histories</relationshipLabel>
    <relationshipName>SLA_Escalation_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>