force-app/main/default/objects/SLA_Escalation_History__c/fields/Escalated_At__c.field-meta.xml
<CustomField>
    <fullName>Escalated_At__c</fullName>
    <label>Escalated At</label>
    <type>DateTime</type>
</CustomField>