force-app/main/default/objects/SLA_Escalation_History__c/fields/New_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>New_SLA_Status__c</fullName>
    <label>New SLA Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>