force-app/main/default/objects/SLA_Escalation_History__c/fields/Previous_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_SLA_Status__c</fullName>
    <label>Previous SLA Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>