force-app/main/default/objects/SLA_Escalation_History__c/fields/SLA_Due_At__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_At__c</fullName>
    <label>SLA Due At</label>
    <type>DateTime</type>
</CustomField>