force-app/main/default/objects/SLA_Escalation_History__c/fields/SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Type__c</fullName>
    <label>SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Response</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>